# libot

./: .gitignore  Cargo.toml
src/: client.rs  context.rs  error.rs  lib.rs  model.rs  test_util.rs
src/model/: bot_event.rs  challenge.rs  mod.rs  request.rs  user.rs
src/model/game/: chat.rs  event.rs  mod.rs
src/model/user/: mod.rs  preferences.rs
