[package]
name = "libot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
ndjson-stream = { version = "0.1", default-features = false, features = [ "bytes", "stream" ] }
reqwest = { version = "0.11", features = [ "stream", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
kernal = "0.3"
rstest = "0.18"
tokio-test = "0.4"
wiremock = "0.5"
